<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/onboarding_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFDF8"
    android:clipToOutline="true">

    <ImageView
        android:id="@+id/onboarding3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/fondo_de_onboarding_2"
        android:scaleType="centerCrop"
        android:src="@drawable/img_onboarding3" />

    <TextView
        android:id="@+id/tituloOnboarding4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@raw/regularbold"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@id/texto_onboarding3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/tituloOnboarding4"
        android:textAppearance="@style/TituloEstilo" />

    <TextView
        android:id="@+id/texto_onboarding3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@raw/regular"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/botonCrearCuenta3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="0sp"
        android:text="@string/texto_onboarding4"
        android:textAppearance="@style/aprende_len_onboarding" />

    <Button
        android:id="@+id/botonCrearCuenta3"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:backgroundTint="@color/portakal"
        android:fontFamily="@raw/subtitulo"
        android:text="@string/crear_cuenta"
        app:layout_constraintBottom_toTopOf="@id/botonIniciarSesion3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAppearance="@style/boton_onboarding" />

    <Button
        android:id="@+id/botonIniciarSesion3"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginBottom="70dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:backgroundTint="@color/portakal"
        android:fontFamily="@raw/subtitulo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/iniciar_sesi_n"
        android:textAppearance="@style/boton_onboarding" />


</androidx.constraintlayout.widget.ConstraintLayout>
