<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/onboarding_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFDF8"
    android:clipToOutline="true">

    <ImageView
        android:id="@+id/onboarding3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/fondo_de_onboarding_2"
        android:scaleType="centerCrop"
        android:src="@drawable/img_onboarding1" />

    <TextView
        android:id="@+id/una_nueva_f"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@raw/regularbold"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="-14sp"
        android:layout_marginBottom="8dp"
        android:text="@string/tituloOnboarding2"
        android:textAppearance="@style/TituloEstilo"
        app:layout_constraintBottom_toTopOf="@+id/aprende_len"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/aprende_len"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@raw/regular"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="0sp"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginBottom="20dp"
        android:text="@string/texto_onboarding2"
        android:textAppearance="@style/aprende_len_onboarding"
        app:layout_constraintBottom_toTopOf="@+id/botonCrearCuenta1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/botonCrearCuenta1"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:backgroundTint="@color/portakal"
        android:fontFamily="@raw/subtitulo"
        android:text="@string/crear_cuenta"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textAppearance="@style/boton_onboarding"
        app:layout_constraintBottom_toTopOf="@+id/botonIniciarSesion1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/botonIniciarSesion1"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:backgroundTint="@color/portakal"
        android:fontFamily="@raw/subtitulo"
        android:text="@string/iniciar_sesi_n"
        android:layout_marginBottom="70dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textAppearance="@style/boton_onboarding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
