<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/img_crearcuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/CircularImageView" />

    <TextView
        android:id="@+id/crea_una_cu"
        android:layout_width="283dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@raw/regularbold"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="-14sp"
        android:text="@string/crea_una_cu"
        android:textAppearance="@style/tituloAutenticacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shapeableImageView" />

    <TextView
        android:id="@+id/aprende_lsc"
        android:layout_width="282dp"
        android:layout_height="50dp"
        android:layout_marginTop="14dp"
        android:fontFamily="@raw/regular"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="2sp"
        android:text="@string/aprende_lsc"
        android:textAppearance="@style/descripcionAutenticacion"
        android:translationY="-1.15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crea_una_cu" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/nombre_completo"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aprende_lsc"
        app:startIconDrawable="@drawable/ic_user_circle"> <!-- Icono al lado izquierdo del hint -->

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@raw/regular"
            android:hint=""
        android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/email"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldNombre"
        app:startIconDrawable="@drawable/ic_mail"> <!-- Icono al lado izquierdo del hint -->

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@raw/regular"
            android:hint=""
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/usuario"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldEmail"
        app:startIconDrawable="@drawable/ic_username"> <!-- Icono al lado izquierdo del hint -->

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@raw/regular"
            android:hint=""
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/contrase_a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldUsuario"
        app:startIconDrawable="@drawable/ic_lock"
    app:endIconMode="password_toggle"> <!-- Icono de ojo para mostrar/ocultar contraseña -->

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@raw/regular"
        android:hint=""
        android:inputType="textPassword" /> <!-- Tipo de entrada para contraseña -->
</com.google.android.material.textfield.TextInputLayout>


<Button
        android:id="@+id/botonCrearCuenta"
        android:layout_width="320dp"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
    android:layout_marginBottom="10dp"
        android:backgroundTint="@color/portakal"
        android:fontFamily="@raw/subtitulo"
        android:text="@string/crear_cuenta"
        android:textAppearance="@style/boton_onboarding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldPassword" />


    <LinearLayout
        android:id="@+id/textsContainerIniciarSesion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="43dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonCrearCuenta">

        <TextView
            android:id="@+id/ya_tienes_cuenta_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.5"
            android:fontFamily="@raw/regular"
            android:gravity="end"
            android:text="@string/ya_tienes_cuenta"
            android:textAppearance="@style/ya_tienes_cuenta"
            android:translationY="-1.15sp" />

        <TextView
            android:id="@+id/textoIniciarSesion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_weight="0.5"
            android:fontFamily="@raw/regularbold"
            android:gravity="start"

            android:text="@string/inicia"
            android:textAppearance="@style/inicia"
            android:translationY="-1.15sp" />
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>